--- a/functions/crawler/Dockerfile
+++ b/functions/crawler/Dockerfile
@@ -6,6 +6,6 @@ ENV APP_DIR /var/task
 ADD . .
 
 CMD pip install -r requirements.txt -t $APP_DIR && \
-  zip -9 deploy_crawler.zip living_life_crawler.py && \
-  zip -9 deploy_crawler.zip daily_bible_crawler.py && \
-  zip -r9 deploy_crawler.zip *
+  zip -9 quiettime.zip living_life_crawler.py && \
+  zip -9 quiettime_crawler.zip daily_bible_crawler.py && \
+  zip -r9 quiettime_crawler.zip *
